--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "core-js": "^3.8.3",
         "element-ui": "^2.15.9",
         "js-sha512": "^0.8.0",
+        "sha512": "0.0.1",
         "vue": "^2.7.8",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2"
